# dbc-influxdb

./: .gitignore  CHANGELOG.md  README.md  _pyproject.toml  pyproject.toml
dbc_influxdb/: __init__.py  common.py  db.py  filetypereader.py  fluxql.py  main.py  manual_run.py  varscanner.py
notebooks/: delete_data.ipynb  download_allVarsOfSpecificMeasurements.ipynb  download_data.ipynb  download_specificVars.ipynb  upload_data.ipynb
tests/: test_dbc.py
